--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -158,7 +158,7 @@
             <!--            Modal edit-->
             <div class="editForm">
             <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <form th:action="@{/admin/updateUser}" method="post">
+                <form th:action="@{/admin/updateUser}" th:method="PUT">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
