rest controller, js

--- a/src/main/resources/templates/user-panel.html
+++ b/src/main/resources/templates/user-panel.html
@@ -12,11 +12,11 @@
   <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
     <div class="container-fluid me-auto">
       <span class="navbar-brand">
-        <strong th:utext="${currentUser.getUserName()}"></strong>
+        <strong id="headerUsername"></strong>
         with roles:
 
-        <span th:each="role, iterStat : ${currentUser.getRoles()}">
-          <a th:text="${role.getRole()}"></a>
+        <span id="headerRoles">
+
         </span>
       </span>
       <span>
@@ -58,16 +58,7 @@
 
                     </tr>
                     </thead>
-                    <tbody>
-
-                    <tr>
-                        <td th:text="${currentUser.getId()}"/>
-                        <td th:text="${currentUser.getUserName()}"/>
-                        <td th:text="${currentUser.getLastName()}"/>
-                        <td th:text="${currentUser.getAge()}"/>
-                        <td th:text="${currentUser.getEmail()}"/>
-                        <td th:text="${currentUser.showUserList()}"/>
-                    </tr>
+                    <tbody id="userPageBody">
                     </tbody>
                 </table>
 
@@ -78,6 +69,14 @@
         </div>
         </div>
     </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8= sha256-T+aPohYXbm0fRYDpJLr+zJ9RmYTswGsahAoIsNiMld4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+    <script type="text/javascript" src="../static/user-panel.js" th:src="@{/user-panel.js}"></script>
 
 </body>
 </html>
