--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -4,14 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8= sha256-T+aPohYXbm0fRYDpJLr+zJ9RmYTswGsahAoIsNiMld4=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-
-    <script type="text/javascript" src="../static/fetch.js" th:src="@{/fetch.js}"></script>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -21,11 +14,10 @@
     <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
         <div class="container-fluid me-auto">
                 <span class="navbar-brand">
-                    <strong th:utext="${currentUser.getUserName()}"></strong>
+                    <strong id="headerUsername"></strong>
                     with roles:
 
-                    <span th:each="role, iterStat : ${currentUser.getRoles()}">
-                        <a th:text="${role.getRole()}"></a>
+                    <span id="headerRoles">
                     </span>
                 </span>
             <span>
@@ -58,7 +50,7 @@
             <!-- Навигация вкладки -->
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#nav-allUsers" role="tab" aria-controls="home" aria-selected="true">User table</a>
+                    <a class="nav-link active" id="allUsersTableLink" data-toggle="tab" href="#nav-allUsers" role="tab" aria-controls="home" aria-selected="true">User table</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="profile-tab" data-toggle="tab" href="#nav-addNew" role="tab" aria-controls="profile" aria-selected="false">New user</a>
@@ -84,23 +76,7 @@
                         <th>Delete</th>
                     </tr>
                     </thead>
-                    <tbody>
-
-                    <tr th:each="user: ${allUsers}">
-                        <td th:text="${user.getId()}"/>
-                        <td th:text="${user.getUserName()}"/>
-                        <td th:text="${user.getLastName()}"/>
-                        <td th:text="${user.getAge()}"/>
-                        <td th:text="${user.getEmail()}"/>
-                        <td th:text="${user.showUserList()}"/>
-                        <td>
-                            <a th:href="@{/admin/get/{id}(id=${user.getId()})}" class="btn btn-info eBtn">Edit</a>
-                        </td>
-                        <td>
-                            <a th:href="@{/admin/get/{id}(id=${user.getId()})}" class="btn btn-danger dBtn">Delete</a>
-                        </td>
-
-                    </tr>
+                    <tbody id="AllUsersTable">
                     </tbody>
                 </table>
             </div>
@@ -111,37 +87,36 @@
                     <div class="card-header">Add new user</div>
                     <div class="card-body">
                         <div class="col-md-4 mx-auto">
-                            <form th:action="@{/admin}" method="post">
+                            <form id="newUserForm">
                                 <div class="form-group text-center">
-                                    <label for="name" class="form-label"><strong>Name</strong></label>
-                                    <input type="text" class="form-control" th:field="*{newUser.userName}" id="name"/>
+                                    <label for="new-name" class="form-label"><strong>Name</strong></label>
+                                    <input type="text" class="form-control" name="userName" id="new-name"/>
                                 </div>
                                 <div class="form-group text-center">
-                                    <label for="password"><strong>Password</strong> </label>
-                                    <input type="password" class="form-control" th:field="*{newUser.password}"
-                                           id="password"/>
+                                    <label for="new-password"><strong>Password</strong> </label>
+                                    <input type="password" class="form-control" name="password"
+                                           id="new-password"/>
                                 </div>
                                 <div class="form-group text-center">
-                                    <label for="lastname"><strong>Last name</strong> </label>
-                                    <input type="text" class="form-control" th:field="*{newUser.lastName}"
-                                           id="lastname"/>
+                                    <label for="new-lastname"><strong>Last name</strong> </label>
+                                    <input type="text" class="form-control" name="lastName"
+                                           id="new-lastname"/>
                                 </div>
                                 <div class="form-group text-center">
-                                    <label for="age" class="form-label"><strong>Age</strong></label>
-                                    <input type="number" class="form-control" th:field="*{newUser.age}" id="age"/>
+                                    <label for="new-age" class="form-label"><strong>Age</strong></label>
+                                    <input type="number" class="form-control" name="age" id="new-age"/>
                                 </div>
                                 <div class="form-group text-center">
-                                    <label for="email" class="form-label"><strong>Email</strong></label>
-                                    <input type="email" class="form-control" id="email"
-                                           placeholder="name@example.com" th:field="*{newUser.email}">
+                                    <label for="new-email" class="form-label"><strong>Email</strong></label>
+                                    <input type="email" class="form-control" id="new-email"
+                                           placeholder="name@example.com" name="email">
                                 </div>
                                 <div class="form-group text-center">
-                                    <label for="role"><strong>Role</strong></label>
-                                    <select type="text" class="custom-select" th:field="*{newRole.role}"
-                                            id="role"
+                                    <label for="new-roles"><strong>Role</strong></label>
+                                    <select name="roles" class="form-control"
+                                            id="new-roles"
                                             multiple="multiple" size="2">
-                                        <option th:value="ROLE_ADMIN">ADMIN</option>
-                                        <option th:value="ROLE_USER">USER</option>
+
                                     </select>
                                 </div>
                                 <div class="form-group text-center">
@@ -158,7 +133,7 @@
             <!--            Modal edit-->
             <div class="editForm">
             <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <form th:action="@{/admin/updateUser}" th:method="PUT">
+                <form id="formEditUser">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -193,19 +168,17 @@
                                 <input type="text" class="form-control" id="passwordEdit" name="password" />
                             </div>
                             <div class="form-group text-center">
-                                <label for="roleEdit"><strong>Role</strong></label>
-                                <select class="custom-select"
-                                        id="roleEdit"
-                                        multiple="multiple" name="role" size="2" th:value="${newRole.role}">
-                                    <option th:value="ROLE_ADMIN">ADMIN</option>
-                                    <option th:value="ROLE_USER">USER</option>
+                                <label for="rolesEditUser"><strong>Role</strong></label>
+                                <select class="form-control"
+                                        id="rolesEditUser"
+                                        multiple="multiple" name="roles" size="2">
                                 </select>
                             </div>
 
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <input type="submit" class="btn btn-primary" value="save"/>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="editFormCloseButton">Close</button>
+                            <button type="submit" class="btn btn-primary">Edit</button>
                         </div>
                     </div>
                 </div>
@@ -215,7 +188,7 @@
 <!--        Start of Delete form-->
         <div class="deleteForm">
             <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <form th:action="@{/admin/delete}" th:method="DELETE">
+                <form id="formDeleteUser">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -251,19 +224,18 @@
                                 </div>
                                 <div class="form-group text-center">
 
-                                    <label for="roleDel"><strong>Role</strong></label>
-                                    <select class="custom-select bg-light " name="nameRole"
-                                            id="roleDel"
-                                            multiple="multiple" size="2"  onmousedown="return false" onkeydown="return false">
-                                        <option>ADMIN</option>
-                                        <option >USER</option>
+                                    <label for="rolesDeleteUser"><strong>Role</strong></label>
+                                    <select class="form-control" name="roles"
+                                            id="rolesDeleteUser"
+                                            multiple="multiple" size="2" disabled >
+
                                     </select>
                                 </div>
 
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <input type="submit" class="btn btn-danger" value="delete"/>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="deleteFormCloseButton">Close</button>
+                                <button type="submit" class="btn btn-danger btn btn-primary">Delete</button>
                             </div>
                         </div>
                     </div>
@@ -292,16 +264,8 @@
 
                         </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="userPageBody">
 
-                        <tr>
-                            <td th:text="${currentUser.getId()}"/>
-                            <td th:text="${currentUser.getUserName()}"/>
-                            <td th:text="${currentUser.getLastName()}"/>
-                            <td th:text="${currentUser.getAge()}"/>
-                            <td th:text="${currentUser.getEmail()}"/>
-                            <td th:text="${currentUser.showUserList()}"/>
-                        </tr>
                         </tbody>
                     </table>
 
@@ -316,6 +280,14 @@
 </div>
     </div>
 </div>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8= sha256-T+aPohYXbm0fRYDpJLr+zJ9RmYTswGsahAoIsNiMld4=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+<script type="text/javascript" src="../static/admin-panel.js" th:src="@{/admin-panel.js}"></script>
 
 
 
